# idp-client-python

./: .gitignore  CLAUDE.md  Makefile  README.md  openapi-config.yaml  pyproject.toml
notebooks/: README.md
notebooks/simple/: simple-idp.ipynb
openapi/: openapi.json
src/idp_client/: __init__.py  _version.py  async_client.py  auth.py  cli.py  client.py  compat.py  embedding.py  errors.py
src/idp_client/_generated/: __init__.py
src/idp_client/_generated/api/embedding/: openai_embed_route_v1_embeddings_post.py
src/idp_client/_generated/api/extraction/: cancel_extraction_job.py  extract_sync.py  get_extraction_job.py  get_extraction_job_result.py  submit_extraction_job.py
src/idp_client/_generated/api/health/: get_health.py
src/idp_client/_generated/models/: __init__.py  confidence_summary.py  extract_response.py  extract_sync_body.py  extraction_job_out.py  health_response.py  health_response_status.py  job_status.py  open_ai_embedding_request.py  open_ai_embedding_request_encoding_format.py  problem_details.py  problem_details_extra_type_0.py  result_format.py  submit_extraction_job_body.py
tests/: conftest.py
tests/live/: test_smoke.py
tests/unit/: test_async_client.py  test_async_client_embed.py  test_auth.py  test_cli_extract.py  test_cli_health.py  test_cli_jobs.py  test_client_embed.py  test_client_extract.py  test_client_health.py  test_client_jobs.py  test_compat_check.py  test_errors.py  test_streaming_upload.py
