[project]
name = "idp-client"
version = "0.1.0"
description = "Python client (library + CLI) for the ocr-svc IDP REST API."
readme = "README.md"
authors = [
    { name = "Pragma Works", email = "pragma-works@gmail.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.15"
dependencies = [
    "httpx>=0.27",
    "attrs>=23.2",
    "typer>=0.12",
    "python-dateutil>=2.9",
]

[project.scripts]
idp-client = "idp_client.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "openapi-python-client>=0.21",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/idp_client/_generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]
"src/idp_client/errors.py" = ["N818"]  # IdpJobFailed is a public name; plan §6 fixes it.

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/idp_client"]
exclude = ["src/idp_client/_generated/.*"]

[[tool.mypy.overrides]]
module = "idp_client._generated.*"
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "-m unit"
markers = [
    "unit: fast, no I/O; respx-mocked HTTP only",
    "live: opt-in smoke against IDP_BASE_URL (skipped when env unset)",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/idp_client"]
omit = ["src/idp_client/_generated/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
